hphp/hack/test/typecheck/private_bad3.php.exp
File "private_bad3.php", line 11, characters 20-22:
You cannot access this method (Typing[4112])
  File "private_bad3.php", line 4, characters 20-22:
  This method is private
